Styles for window and window-main-col classes

--- a/content/styles.css
+++ b/content/styles.css
@@ -1,8 +1,11 @@
 .window {
-  width: 98%;
+  width: 90% !important;
+  max-width: max-content !important;
+  min-width: 768px !important;
 }
 
 .window-main-col {
-  width: 100%;
-  max-width: min-content;
+  width: 100% !important;
+  max-width: max-content !important;
+  min-width: 550px !important;
 }
