--- a/content/styles.css
+++ b/content/styles.css
@@ -1,11 +1,11 @@
 .window {
   width: 90% !important;
-  max-width: max-content !important;
+  max-width: 95vw !important;
   min-width: 768px !important;
 }
 
 .window-main-col {
   width: 100% !important;
-  max-width: max-content !important;
+  max-width: calc(100% - 230px) !important;
   min-width: 550px !important;
 }
